Uploaded DeepLab Studio 0.0.48

--- a/Java/res/localizations/de.txt
+++ b/Java/res/localizations/de.txt
@@ -8,7 +8,7 @@ initInterface.menu.options=Optionen
 initInterface.menu.run=Starten
 initInterface.menu.help=Hilfe
 
-initInterface.menu.item.new=Neu
+initInterface.menu.item.createNetwork=Neues Netzwerk
 initInterface.menu.item.import=Importieren...
 initInterface.menu.item.export=Exportieren...
 initInterface.menu.item.trainingFile=Trainingsdatei...
