--- a/Java/res/localizations/en.txt
+++ b/Java/res/localizations/en.txt
@@ -8,7 +8,7 @@ initInterface.menu.options=Options
 initInterface.menu.run=Run
 initInterface.menu.help=Help
 
-initInterface.menu.item.new=New
+initInterface.menu.item.createNetwork=Create Network
 initInterface.menu.item.import=Import...
 initInterface.menu.item.export=Export...
 initInterface.menu.item.trainingFile=Training File...
